  - voState:transformVO_num - fixed bug reading autostate, again assumed @"0" would test correctly as !autoscale
  - voChoice:segmentedControl - same test error on shrinkb
  - voTextBox:segmentChanged,voGraphSet - same test error on tbhi,tbni,tbnl
  - voTextBox:segmentChanged - release picker view so gets rebuilt (fix bugs on people, history pickers incl crash on switch)
  - added graphTrackerV:doDrawGraph controlling [drawRect] action, so graph not redrawn for return to utc
  - changed trackerObj so fn results (=value) *are* saved,loaded to speed graphing, but issues remain for updating, saving in db

--- check in ---

06 May 2011
  - added CGRects to divide up graph screen

10 May 2011
  - replaced dbg-defs defines with args... forms

13 May 2011
  - finished re-org of graphing to use UIScrollView for zoom etc, separate windows for title, axes.  still need work for axis labels

--- check in ---

18 May 2011
  - finished axis labels
  - tap on y axis label to change vo displayed
  - tap on graph to mark and set tracker date, double tap to clear
  - return to graph with current date marked 
  - factored dpRslt out of datePickerVC to facilitate this

--- check in ---

18 May 2011
  - changed tf fin edit to not call tfDone -- incompatible with vot_choice ????  what was it needed for ????
  - fixed graphing for vot_choice colors, implemented y axis labels for vot_choice

19 May 2011
  - added currVO to gtv class; double line widths for selected vo
  - tbox linecount set maxVal to at least YTICKS to get int vals on y axis labels
  - clean y axis for non-numeric entries

20 May 2011
  - added processingTfDone flag for voChoices and configTVObjVC so tfDone/ctfDone (see 18 may, 05 may) can process multiple events without recursing inadvertently

25 May 2011
  - starting history, names picker indices; default on for names

27 May 2011
  - finished history, names picker indices.

--- check in ---

