@@ -16,6 +16,8 @@
 }
 + (NSString *) ioFilePath:(NSString*)fname access:(BOOL)access;
 + (unsigned int) countLines:(NSString*)str;
++ (void) myNavPushTransition:(UINavigationController*)navc vc:(UIViewController*)vc animOpt:(NSInteger)animOpt;
++ (void) myNavPopTransition:(UINavigationController*)navc animOpt:(NSInteger)animOpt;
 
 @end
 
